--- a/index.html
+++ b/index.html
@@ -3,199 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sagittarius A</title>
+    <title>Gravity</title>
+    <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
     <style>
         body {
             margin: 0;
             padding: 0;
+            width: 100vw;
+            height: 100vh;
             overflow: hidden;
-            background-color: #000;
+            background-image: url('cosmic.jpeg');
+            background-size: cover;
+            background-position: center;
             display: flex;
             justify-content: center;
             align-items: center;
+        }
+        model-viewer {
+            width: 100vw;
             height: 100vh;
-        }
-        canvas {
-            display: block;
-        }
-        #velocity {
-            position: absolute;
-            color: white;
-            font-size: 12px;
-            transform: translate(-50%, -50%);
-            pointer-events: none;
         }
     </style>
 </head>
 <body>
-    <canvas id="blackHoleCanvas"></canvas>
-    <div id="velocity"></div>
+    <model-viewer id="black-hole-model" src="black_hole.glb" alt="A 3D model of a black hole" auto-rotate camera-controls background-color="#000" loaded="onModelLoaded()"></model-viewer>
+
+    <!-- Hidden audio element to play sound -->
+    <audio id="background-music" src="sound.mp3" preload="auto" loop></audio>
 
     <script>
-
-        const canvas = document.getElementById('blackHoleCanvas');
-        const ctx = canvas.getContext('2d');
-        const velocityDisplay = document.getElementById('velocity');
-        const centerX = window.innerWidth / 2;
-        const centerY = window.innerHeight / 2;
-        const radius = 30;
-        let angle = 0;
-        let cursorEngulfed = false;
-        let breakingApart = false;
-        let mouseX = centerX;
-        let mouseY = centerY;
-        let velocityX = 0;
-        let velocityY = 0;
-        let particles = [];
-        let isMouseDown = false;
-
-        canvas.width = window.innerWidth;
-        canvas.height = window.innerHeight;
-
-        function draw() {
-            ctx.clearRect(0, 0, canvas.width, canvas.height);
-
-            // Draw black hole
-            ctx.beginPath();
-            ctx.arc(centerX, centerY, radius, 0, Math.PI * 2);
-            ctx.fillStyle = 'black';
-            ctx.shadowBlur = 50;
-            ctx.shadowColor = 'white';
-            ctx.fill();
-
-            // Draw accretion disk
-            const diskRadius = radius * 2.5;
-            ctx.beginPath();
-            ctx.arc(centerX, centerY, diskRadius, angle, angle + Math.PI * 0.3);
-            const gradient = ctx.createRadialGradient(centerX, centerY, radius, centerX, centerY, diskRadius);
-            gradient.addColorStop(0, 'transparent');
-            gradient.addColorStop(0.7, 'rgba(255, 255, 255, 0.2)');
-            gradient.addColorStop(1, 'rgba(255, 255, 255, 0)');
-            ctx.fillStyle = gradient;
-            ctx.fill();
-
-            // Update angle for rotation
-            angle += 0.01;
-
-            // Handle cursor attraction and breaking apart
-            if (isMouseDown && !cursorEngulfed) {
-                const dx = centerX - mouseX;
-                const dy = centerY - mouseY;
-                const distance = Math.sqrt(dx * dx + dy * dy);
-                const force = Math.min(10 / distance, 1);
-                velocityX += dx * force * 0.1;
-                velocityY += dy * force * 0.1;
-
-                mouseX += velocityX;
-                mouseY += velocityY;
-
-                if (distance < radius) {
-                    cursorEngulfed = true;
-                    breakingApart = true;
-                    createParticles();
-                }
-            } else {
-                updateParticles();
-            }
-
-            // Draw cursor or particles
-            if (!breakingApart) {
-                ctx.beginPath();
-                ctx.arc(mouseX, mouseY, 5, 0, Math.PI * 2);
-                ctx.fillStyle = 'red';
-                ctx.fill();
-            } else {
-                drawParticles();
-            }
-
-            // Update velocity display
-            velocityDisplay.style.left = `${mouseX}px`;
-            velocityDisplay.style.top = `${mouseY - 15}px`;
-            const velocityMagnitude = Math.sqrt(velocityX ** 2 + velocityY ** 2).toFixed(2);
-            const velocityAngle = (Math.atan2(velocityY, velocityX) * 180 / Math.PI).toFixed(2);
-            velocityDisplay.textContent = `v↑ = ${velocityMagnitude}ms`;
-
-            requestAnimationFrame(draw);
+        function onModelLoaded() {
+            // Show the black hole model
+            document.getElementById('black-hole-model').style.display = 'block';
+            
+            // Play the background music
+            document.getElementById('background-music').play();
         }
-
-        function emitGRB() {
-            ctx.save();
-            ctx.translate(centerX, centerY);
-            const burstAngle = Math.random() * Math.PI * 2;
-            ctx.rotate(burstAngle);
-            const burstGradient = ctx.createLinearGradient(0, 0, canvas.width, 0);
-            burstGradient.addColorStop(0, 'rgba(255, 255, 255, 0.9)');
-            burstGradient.addColorStop(1, 'transparent');
-            ctx.fillStyle = burstGradient;
-            ctx.fillRect(0, -5, canvas.width, 10);
-            ctx.restore();
-            setTimeout(emitGRB, 8000);
-        }
-
-        function createParticles() {
-            const particleCount = 50;
-            for (let i = 0; i < particleCount; i++) {
-                particles.push({
-                    x: mouseX,
-                    y: mouseY,
-                    angle: Math.random() * Math.PI * 2,
-                    speed: Math.random() * 0.5 + 0.1,
-                    life: Math.random() * 30 + 30,
-                    size: Math.random() * 2 + 1
-                });
-            }
-        }
-
-        function updateParticles() {
-            particles.forEach((particle, index) => {
-                particle.life--;
-                if (particle.life <= 0) {
-                    particles.splice(index, 1);
-                    return;
-                }
-                particle.x += Math.cos(particle.angle) * particle.speed;
-                particle.y += Math.sin(particle.angle) * particle.speed;
-
-                const dx = centerX - particle.x;
-                const dy = centerY - particle.y;
-                const distance = Math.sqrt(dx * dx + dy * dy);
-                const force = Math.min(10 / distance, 1);
-                particle.x += dx * force * 0.05;
-                particle.y += dy * force * 0.05;
-            });
-
-            if (particles.length === 0) {
-                cursorEngulfed = false;
-                breakingApart = false;
-            }
-        }
-
-        function drawParticles() {
-            particles.forEach(particle => {
-                ctx.beginPath();
-                ctx.arc(particle.x, particle.y, particle.size, 0, Math.PI * 2);
-                ctx.fillStyle = 'rgba(0, 255, 255, 0.8)';
-                ctx.shadowBlur = 10;
-                ctx.shadowColor = 'rgba(0, 255, 255, 0.8)';
-                ctx.fill();
-            });
-        }
-
-        canvas.addEventListener('mousedown', () => {
-            isMouseDown = true;
-        });
-
-        canvas.addEventListener('mouseup', () => {
-            isMouseDown = false;
-        });
-
-canvas.addEventListener('mousemove', (event) => {
-    mouseX = event.clientX;
-    mouseY = event.clientY;
-});
-
-draw();
-emitGRB();
-</script>
+    </script>
 </body>
 </html>
